--- a/MLH/manifest.json
+++ b/MLH/manifest.json
@@ -8,7 +8,7 @@
  "url": "https://raw.githubusercontent.com/etcipnja/MLH/master/MLH/manifest.json",
  "zip": "https://github.com/etcipnja/MLH/archive/master.zip",
  "executable": "python",
- "args": ["MLH-master/MLH/script.py"],
+ "args": ["MLH-master/MLH/main.py"],
  "config": [
   {"name": "pointname", "label": "Filter by plant name", "value": "*"},
   {"name": "filter_meta", "label": "Filter by meta data (see documentation)", "value": "None"},
