--- a/MLH/manifest.json
+++ b/MLH/manifest.json
@@ -2,7 +2,7 @@
  "package": "MLH",
  "language": "python",
  "author": "etcipnja",
- "description": "Mother's little helper to automate routine operations on multiple plants at once",
+ "description": "-DEV-  Mother's little helper to automate routine operations on multiple plants at once",
  "version": "2.3.0",
  "min_os_version_major": 6,
  "url": "https://raw.githubusercontent.com/etcipnja/MLH/dev/MLH/manifest.json",
