--- a/MLH/manifest.json
+++ b/MLH/manifest.json
@@ -2,11 +2,11 @@
  "package": "MLH",
  "language": "python",
  "author": "etcipnja",
- "description": "-DEV-  Mother's little helper to automate routine operations on multiple plants at once",
- "version": "2.3.10",
+ "description": "Mother's little helper to automate routine operations on multiple plants at once",
+ "version": "2.4.0",
  "min_os_version_major": 6,
- "url": "https://raw.githubusercontent.com/etcipnja/MLH/dev/MLH/manifest.json",
- "zip": "https://github.com/etcipnja/MLH/archive/dev.zip",
+ "url": "https://raw.githubusercontent.com/etcipnja/MLH/master/MLH/manifest.json",
+ "zip": "https://github.com/etcipnja/MLH/archive/master.zip",
   "executable": "python",
  "args": ["MLH-dev/MLH/main.py"],
  "config": [
