--- a/MLH/manifest.json
+++ b/MLH/manifest.json
@@ -3,12 +3,12 @@
  "language": "python",
  "author": "etcipnja",
  "description": "Mother's little helper to automate routine operations on multiple plants at once",
- "version": "2.4.0",
+ "version": "2.4.1",
  "min_os_version_major": 6,
  "url": "https://raw.githubusercontent.com/etcipnja/MLH/master/MLH/manifest.json",
  "zip": "https://github.com/etcipnja/MLH/archive/master.zip",
   "executable": "python",
- "args": ["MLH-dev/MLH/main.py"],
+ "args": ["MLH-master/MLH/main.py"],
  "config": [
   {"name": "pointname", "label": "Filter by plant name", "value": "*"},
   {"name": "filter_meta", "label": "Filter by meta data (see documentation)", "value": "None"},
